--- a/index.html
+++ b/index.html
@@ -1,35 +1,23 @@
 ---
 title: Mathematikos
 ---
-
 <div class="slideshow-container">
 
 <div class="mySlides fade">
-  <!--div class="numbertext">1 / 3</div-->
-  <img src="assets/images/interesting1.png" alt="Najkrajšia rovnica matematiky je Eulerova identita.">
-  <!--div class="text">Caption Text</div-->
+  <img src="assets/images/homepage/numSets.gif" alt="Číselné množiny.">
 </div>
 
-<div class="mySlides fade">
-  <!--div class="numbertext">2 / 3</div-->
-  <img src="assets/images/interesting2.png" alt="Dokážeš rozkrojiť tortu tromi rezmi na osem rovnakých častí?">
-  <!--div class="text">Caption Two</div-->
+</div> <!--End of slideshow-container--> 
+
+<div id="boy">
+	<img src="assets/images/homepage/boy.png" alt="Najkrajšia rovnica matematiky je Eulerova identita.">
 </div>
 
-<div class="mySlides fade">
-  <!--div class="numbertext">3 / 3</div-->
-  <img src="assets/images/interesting3.png" alt="Keď zložíš papier viac ako 103-krát, bude hrubší ako celý vesmír.">
-  <!--div class="text">Caption Three</div-->
-</div>
-
-</div>
-<br>
-
-<div style="text-align:center">
+<!--div style="text-align:center">
   <span class="dot"></span>
   <span class="dot"></span>
   <span class="dot"></span>
-</div>
+</div-->
 
 <script>
 var slideIndex = 0;
@@ -38,17 +26,17 @@ showSlides();
 function showSlides() {
   var i;
   var slides = document.getElementsByClassName("mySlides");
-  var dots = document.getElementsByClassName("dot");
+  //var dots = document.getElementsByClassName("dot");
   for (i = 0; i < slides.length; i++) {
     slides[i].style.display = "none";
   }
   slideIndex++;
   if (slideIndex > slides.length) {slideIndex = 1;}
-  for (i = 0; i < dots.length; i++) {
+ /* for (i = 0; i < dots.length; i++) {
     dots[i].className = dots[i].className.replace(" active", "");
-  }
+  }*/
   slides[slideIndex-1].style.display = "block";
-  dots[slideIndex-1].className += " active";
+  //dots[slideIndex-1].className += " active";
   setTimeout(showSlides, 7000); // Change image every 7 seconds
 }
 </script>
