Added contact page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 title: Mathematikos
 ---
+<div class="page">
 <div class="slideshow-container">
 
 <div class="mySlides fade">
@@ -11,6 +12,15 @@ title: Mathematikos
 
 <div id="boy">
 	<img src="assets/images/homepage/boy.png" alt="Najkrajšia rovnica matematiky je Eulerova identita.">
+</div>
+
+</div>
+
+<div class="page" id="contact_page">
+	<div>
+		mathematikos.github@gmail.com <br /><br />
+		Napíšte nám. Aj Váš názor je pre nás dôležitý!
+	</div>
 </div>
 
 <!--div style="text-align:center">
