Added titles to content.

--- a/index.html
+++ b/index.html
@@ -5,13 +5,29 @@ title: Mathematikos
 <div class="slideshow-container">
 
 <div class="mySlides fade">
-  <img src="assets/images/homepage/numSets.gif" alt="Číselné množiny.">
+  <img src="assets/images/homepage/numbers.png" alt="Číselné množiny.">
+</div>
+
+<div class="mySlides fade">
+  <img src="assets/images/homepage/functions.png" alt="Funkcie">
+</div>
+
+<div class="mySlides fade">
+  <img src="assets/images/homepage/aGeom.png" alt="Analytická geometria">
+</div>
+
+<div class="mySlides fade">
+  <img src="assets/images/homepage/geom.png" alt="Geometria">
+</div>
+
+<div class="mySlides fade">
+  <img src="assets/images/homepage/statistics.png" alt="Štatistika">
 </div>
 
 </div> <!--End of slideshow-container--> 
 
 <div id="boy">
-	<img src="assets/images/homepage/boy.png" alt="Najkrajšia rovnica matematiky je Eulerova identita.">
+	<img src="assets/images/homepage/boy.png" alt="Chlapec.">
 </div>
 
 </div>
