--- a/pages/numberSystems.html
+++ b/pages/numberSystems.html
@@ -9,7 +9,7 @@ permalink: ciselne_sustavy
 
 <h1>Číselné sústavy</h1>
 
-<h2>Nepozičná sústava</h2>
+<h2><a id="num_nonPosNumSys"></a>Nepozičná sústava</h2>
 
 Bol si už v Egypte? Videl si pyramídy? Vedel si, že Egypťania vedeli operovať oko? Niektoré egyptské objavy používame dodnes. Je to napríklad 365 dňový rok. Nič z toho by nedokázali bez matematiky. Ich výpočtom by však dnes rozumelo len veľmi málo ľudí, pretože nepoužívali také čísla, aké poznáme dnes. Ich čísla vyzerali takto: <br /><br />
 
