Changed number section
Added page How we learnt to count. Renamed pages in number section. Fixed errors in number pages.

--- a/pages/vocabulary.html
+++ b/pages/vocabulary.html
@@ -43,6 +43,12 @@ permalink: matematicko-slovensky_slovnik
 <b>Lineárny</b> <div>V Synonymickom slovníku slovenčiny [2] nájdeme, že slovo lineárny, znamená priamočiary, rovný. Od tohto slova je odvodený aj názov lineárnej funkcie. Ak niečo rastie (alebo klesá) lineárne, znamená to, že sa to zväčšuje (zmenšuje) v každom kroku o rovnakú časť (napr. keď si každý mesiac odložíš rovnakú sumu, tak tvoja našetrená suma rastie lineárne). Pri takomto raste vzniká v grafe rovná čiara, preto sa rast nazýva lineárny.</div>
 </div>
 
+<div class='vocabLetter'>P</div>
+
+<div class='vocabEntry'>
+<b>Periodický</b> <div>Slovo periodický znamená opakujúci sa. Keď je niečo periodické, tak sa to opakuje.</div>
+</div>
+
 <div class='vocabLetter'>R</div>
 
 <div class='vocabEntry'>
