Improve SEO with seo-tag and sitemap plugins

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ title: Mathematikos
 
 <div class="page" id="contact_page">
 	<div>
-		mathematikos.github@gmail.com <br /><br />
+		{{ site.email }} <br /><br />
 		Napíšte nám. Aj Váš názor je pre nás dôležitý!
 	</div>
 </div>
