Add articles about goniometry functions, sin cos and tan. Modify unit circle article.

--- a/pages/gonio_unit_circle.html
+++ b/pages/gonio_unit_circle.html
@@ -8,24 +8,19 @@ permalink: jednotkova_kruznica
 <div class="content">
 
 <h1>Jednotková kružnica</h1>
-Niektoré pramene uvádzajú, že jednotkovú kružnicu poznali už v starom Babylone. <b>Používali ju na to, aby si pre daný uhol odmerali pomery strán.</b> Potom sa kdesi zjavila až niekedy v 18. storočí, keď už bolo treba ľuďom komplexné čísla. Pre lepšie vysvetlenie si históriu upravíme. <br /><br />
 
-V článku <a href="ako_vznikla_goniometria" target="_blank">Ako vznikla goniometria</a> sme si písali o architektovi Raachefovi. Raachef dostal za úlohu postaviť najvyššiu pyramídu v Egypte. Najprv bolo treba zistiť, koľko meria najvyššia a potom bolo treba vypočítať, ako veľká má byť nová. Výšku pyramídy odmerať nevedel, tak pomeral, čo mohol, len zo zeme. Výšku pyramídy musel dopočítať. Zistil, že mu tam vychádzajú pravouhlé trojuholníky a našťastie objavil na nich jednu vlastnosť, ktorá ho zachránila. Pre dané uhly v trojuholníku, je pomer strán vždy rovnaký. Nezávisí od veľkosti trojuholníka.
+<b>Jednotková kružnica je kružnica, ktorej stred je v začiatku súradnicovej sústavy (v bode 0,0) a jej polomer je jedna.</b>  Polomer nie je v žiadnych jednotkách. Nie je to 1 cm, ani 1 m, ani 1 km. Je to skrátka iba 1. Súradnicová sústava rozdeľuje plochu na štyri časti. Tieto časti voláme prvý kvadrant, druhý kvadrant, tretí kvadrant a štvrtý kvadrant. Zvykne sa to označovať rímskymi číslami.<br /><br />
 
-<figure>
-  <img src="../assets/images/gonio_triangleRatios.png" alt="Pomery strán v pravouhlom trojuholníku.">
-  <figcaption>Obr. 1.: Tu sú dva trojuholníky. Každý z nich má inú veľkosť strán, ale uhly majú rovnaké. Vyrátali sme všetkých 6 pomerov strán a ako si môžeš všimnúť, pre oba trojuholníky sú rovnaké.</figcaption>
-</figure>
-
-Pomerov strán máme 6 a uhlov je 360. Pre každý uhol teda existuje 6 pomerov. <b>To je spolu 2 160 čísiel.</b> Na zapamätanie trochu veľa. Písať to na papyrus a ešte <a href="ciselne_sustavy#num_nonPosNumSys" target="_blank">v nepozičnej sústave</a> sa Raachefovi tiež nechcelo. Hľadal <b>spôsob, ako by mohol mať pomery strán stále so sebou, nemusel ich mať napísané</b> a ani zapamätané.
-
-Ako presne prišiel na svoj objav sa nedochovalo, ale vynašiel niečo, čo dnes voláme jednotková kružnica. Tá mu poslúžila skvele, pretože si ju stačí iba nakresliť a všetky pomery strán sa dajú na nej odmerať. Neveríš?
+Niektoré pramene uvádzajú, že jednotkovú kružnicu poznali už v starom Babylone. <b>Používali ju na to, aby si pre daný uhol odmerali pomery strán.</b> Potom sa zjavila až v knihe <i>Introductio in analysin infinitorum</i> od Leonarda Eulera [1]. To bolo tak v prvej polovici 18. storočia. <b>Použil ju na znázornenie rôznych vecí</b>, a na to isté ju používame aj dnes. Dajú sa na nej zobraziť napríklad <b>goniometrické funkcie alebo komplexné čísla</b>. Keď sú veci na nej prehľadne nakreslené, hneď sa s tým ľuďom lepšie počíta.
 
 <figure>
-  <img src="../assets/images/gonio_unitCircle.png" alt="Jednotková kružnica">
-  <figcaption>Obr. 2.: Na jednotkovej kružnici sa dajú pravítkom odmerať všetky goniometrické funkcie (pomery strán). Farebným sú vyznačené jednotlivé pomery strán pre uhol 45°.</figcaption>
+  <img src="../assets/images/gonio_unitCircleAux.png" alt="Jednotková kružnica">
+  <figcaption>Obr. 1.: Jednotková kružnica</figcaption>
 </figure>
 
 
+<h1>Zdroje</h1>
+<div class='literature'>
+[1] When did mathematicians invent the unit circle to extend the trig functions? https://hsm.stackexchange.com/questions/11343/when-did-mathematicians-invent-the-unit-circle-to-extend-the-trig-functions
 
 </div>
