--- a/pages/vocabulary.html
+++ b/pages/vocabulary.html
@@ -11,12 +11,19 @@ permalink: matematicko-slovensky_slovnik
 
 <div class='vocabLetter'>A</div>
 <div class='vocabEntry'>
-<b>Absolútny</b> <div>Podľa Slovníka súčasného slovenského jazyka [1], absolútny je taký, ktorý nie je ničím podmienený, na ničom nezávisí. Absolútne číslo je také, ktoré od ničoho nezávisí a je vo všeobecnosti platné.</div>
+<b>Absolútny</b> <div>Podľa Slovníka súčasného slovenského jazyka [1], absolútny je taký, ktorý nie je ničím podmienený, na ničom nezávisí. Absolútne číslo je také, ktoré od ničoho nezávisí a je vo všeobecnosti platné.</div><br />
+
+<b>Amplitúda</b> <div>Je to rozdiel medzi minimom a maximom hodnôt nejakej veličiny.[1]</div>
 </div>
 
 <div class='vocabLetter'>C</div>
 <div class='vocabEntry'>
 <b>Cifra</b> <div>Sú to znaky, ktorými sa zapisujú čísla. Napríklad čísla 842, 248, 482 sú všetky napísané z cifier 2,4,8. Číslo 2 je zapísané cifrou 2. U nás sa používajú tieto cifry: 0,1,2,3,4,5,6,7,8,9.</div>
+</div>
+
+<div class='vocabLetter'>G</div>
+<div class='vocabEntry'>
+<b>Goniometria</b> <div>Je oblasť matematiky, ktorá sa zaoberá meraním uhlov a funkciami týchto uhlov: sínus, kosínus, tangens, cotangens, secans a cosecans. Goniometria pochádza z dvoch gréckych slov: gonió - uhol a metró - meranie.</div>
 </div>
 
 <div class='vocabLetter'>H</div>
