Added gonio_functionsUsage page and some entries to vocabulary.

--- a/pages/vocabulary.html
+++ b/pages/vocabulary.html
@@ -9,73 +9,102 @@ permalink: matematicko-slovensky_slovnik
 
 <h1>Matematicko-slovenský slovník</h1>
 
+<!--.....................................................A..................................................................-->
 <div class='vocabLetter'>A</div>
 <div class='vocabEntry'>
 <b>Absolútny</b> <div>Podľa Slovníka súčasného slovenského jazyka [1], absolútny je taký, ktorý nie je ničím podmienený, na ničom nezávisí. Absolútne číslo je také, ktoré od ničoho nezávisí a je vo všeobecnosti platné.</div><br />
-
-<b>Amplitúda</b> <div>Je to rozdiel medzi minimom a maximom hodnôt nejakej veličiny.[1]</div>
 </div>
 
+<div class='vocabEntry'>
+<b>Amplitúda</b> <div>Je to rozdiel medzi minimom a maximom hodnôt nejakej veličiny.[1] Napríklad pri sínuse alebo kosínuse je to výška vlny.</div><br />
+</div>
+
+<!--.....................................................C..................................................................-->
 <div class='vocabLetter'>C</div>
 <div class='vocabEntry'>
 <b>Cifra</b> <div>Sú to znaky, ktorými sa zapisujú čísla. Napríklad čísla 842, 248, 482 sú všetky napísané z cifier 2,4,8. Číslo 2 je zapísané cifrou 2. U nás sa používajú tieto cifry: 0,1,2,3,4,5,6,7,8,9.</div>
 </div>
 
+<!--.....................................................F..................................................................-->
+<div class='vocabLetter'>F</div>
+<div class='vocabEntry'>
+<b>Frekvencia</b> <div>Ako často sa niečo opakuje. Treba k tomu vedieť nejaké časové obdobie. Napr. ak sa niečo opakuje 2-krát, je rozdiel, či sa to opakuje 2-krát za rok alebo 2-krát za sekundu. Jednotkou frekvencie je Hertz (Hz). Počet Hertzov hovorí o tom, koľko-krát sa niečo zopakuje za 1 sekundu. Ak má niečo napríklad frekvenciu 5Hz, znamená to, že sa to opakuje 5 razy za sekundu. Inak Hertz nie je vymyslené slovo na trápenie žiakov. Heinrich Hertz bol nemecký fyzik, ktorý sa zaujímal o elektromagnetizmus (vďaka tomuto javu môžeš dnes napr. chodiť na internety). Celkom sa mu darilo a tak na jeho počesť pomenovali jednotku frekvencie.</div>
+</div>
+
+<!--.....................................................G..................................................................-->
 <div class='vocabLetter'>G</div>
 <div class='vocabEntry'>
 <b>Goniometria</b> <div>Je oblasť matematiky, ktorá sa zaoberá meraním uhlov a funkciami týchto uhlov: sínus, kosínus, tangens, cotangens, secans a cosecans. Goniometria pochádza z dvoch gréckych slov: gonió - uhol a metró - meranie.</div>
 </div>
 
+<!--.....................................................H..................................................................-->
 <div class='vocabLetter'>H</div>
 <div class='vocabEntry'>
 <b>Horizontálny</b> <div>Niečo, čo je vodorovne</div>
 </div>
 
+<!--.....................................................K..................................................................-->
 <div class='vocabLetter'>K</div>
 
 <div class='vocabEntry'>
-<b>Karteziánsky</b> <div>Karteziánsky súradnicový systém nesie meno francúzskeho filozofa a matematika René Descartes-a, po latinsky Renatus Cartesius. Descartes sa venoval analytickej geometrií, ale až o pár storočí neskôr sa dočkal tej nesmiernej cti, že po ňom pomenovali súradnicový systém.</div>
+<b>Karteziánsky</b> <div>Karteziánsky súradnicový systém nesie meno francúzskeho filozofa a matematika René Descartes-a, po latinsky Renatus Cartesius. Descartes sa venoval analytickej geometrií, ale až o pár storočí neskôr sa dočkal tej nesmiernej cti, že po ňom pomenovali súradnicový systém.</div><br />
 </div><br />
 
 <div class='vocabEntry'>
-<b>Konštantný</b> <div>Niečo, čo sa nemení. Je to stále rovnaké, nech sa deje, čo sa deje.</div>
+<b>Konštantný</b> <div>Niečo, čo sa nemení. Je to stále rovnaké, nech sa deje, čo sa deje.</div><br />
 </div><br />
 
 <div class='vocabEntry'>
 <b>Korelácia</b> <div>Je to vzájomný vzťah medzi dvomi vecami. Ak nejaké veci medzi sebou súvisia, hovoríme, že je medzi nimi korelácia. Napríklad korelácia bude medzi tým, koľko si peňazí si odkladáš na účet a akú sumu máš na účte. Čím viac si odkladáš, tým budeš mať viac našetrené.</div>
 </div>
 
+<!--.....................................................L..................................................................-->
 <div class='vocabLetter'>L</div>
 <div class='vocabEntry'>
 <b>Lineárny</b> <div>V Synonymickom slovníku slovenčiny [2] nájdeme, že slovo lineárny, znamená priamočiary, rovný. Od tohto slova je odvodený aj názov lineárnej funkcie. Ak niečo rastie (alebo klesá) lineárne, znamená to, že sa to zväčšuje (zmenšuje) v každom kroku o rovnakú časť (napr. keď si každý mesiac odložíš rovnakú sumu, tak tvoja našetrená suma rastie lineárne). Pri takomto raste vzniká v grafe rovná čiara, preto sa rast nazýva lineárny.</div>
 </div>
 
+<!--.....................................................M..................................................................-->
+<div class='vocabLetter'>M</div>
+<div class='vocabEntry'>
+<b>Médium</b> <div>Vo fyzike sa toto slovo používa na označenie nejakého prostredia alebo veci, ktoré dokážu niečo niesť/sprostredkovať.[1] Napríklad médium na prenos zvuku môže byť vzduch, lebo vďaka vzduch sa zvuk dokáže šíriť. Iný príklad môže byť prenos internetu. Na to, aby sa informácie dostali od jedného počítača k druhému, treba aby mali kadiaľ ísť. Na prenos informácií ako médium slúžia káble alebo vzduch (wifi).</div>
+</div>
+
+<!--.....................................................P..................................................................-->
 <div class='vocabLetter'>P</div>
 
 <div class='vocabEntry'>
 <b>Periodický</b> <div>Slovo periodický znamená opakujúci sa. Keď je niečo periodické, tak sa to opakuje.</div>
 </div>
 
+<!--.....................................................R..................................................................-->
 <div class='vocabLetter'>R</div>
 
 <div class='vocabEntry'>
-<b>Relatívny</b> <div>V Synonymickom slovníku slovenčiny [2] nájdeme, že slovo relatívny, znamená niečo, čo je je vo vzťahu k niečomu, vzťažné, podmienené. V praxi to znamená niečo takéto. Máme 10 jabĺk. To je absolútne množstvo jabĺk, lebo nevieme o tom povedať, či je to veľa alebo málo. Relatívne množstvo to začne byť vtedy, keď to na niečo vztiahneme. Napríklad na počet detí, ktorým jablká rozdelíme. Keď to dáme na desiatu jednému, asi mu aj zle z toho príde. Keď to rozdelíme pre 1 000 detí, tak sa nikomu neujde skoro nič. Desať jabĺk je vzhľadom na jedno dieťa veľa. Desať jabĺk je vzhľadom na 1 000 detí málo. To je tá relativita.</div>
+<b>Relatívny</b> <div>V Synonymickom slovníku slovenčiny [2] nájdeme, že slovo relatívny, znamená niečo, čo je je vo vzťahu k niečomu, vzťažné, podmienené. V praxi to znamená niečo takéto. Máme 10 jabĺk. To je absolútne množstvo jabĺk, lebo nevieme o tom povedať, či je to veľa alebo málo. Relatívne množstvo to začne byť vtedy, keď to na niečo vztiahneme. Napríklad na počet detí, ktorým jablká rozdelíme. Keď to dáme na desiatu jednému, asi mu aj zle z toho príde. Keď to rozdelíme pre 1 000 detí, tak sa nikomu neujde skoro nič. Desať jabĺk je vzhľadom na jedno dieťa veľa. Desať jabĺk je vzhľadom na 1 000 detí málo. To je tá relativita.</div><br />
 </div>
 
+<!--.....................................................S..................................................................-->
 <div class='vocabLetter'>S</div>
+
+<div class='vocabEntry'>
+<b>Spojitý</b> <div>spojitý znamená neprerušovaný. Je to niečo, čo ide stále v jednom kuse. V matematike sa toto slovo používa napríklad pri funkciách. Znamená to, že funkcia ide bez prerušenia. Jej graf sa dá nakresliť jednou súvislou čiarou.</div>
+</div><br />
+
 <div class='vocabEntry'>
 <b><a id="vocabSuma">Suma $\sum$</a></b> <div>
 Suma je len vznešene zapísané spočítavanie. Keď potrebuješ spočítať nejaké čísla, napr. od 1 po <i>n</i>, tak nemusíš príklad zapísať ako 1+2+3+...+<i>n</i>, ale zapíšeš ich sumou $\sum_{i=1}^{n} i$. Tento zápis znamená asi toto: znak $\sum$ hovorí, že ideme spočítavať. Pod sumou je písmeno <i>i</i> a nad sumou je <i>n</i>. <i>i</i> hovorí, že odkiaľ sa začína spočítavať a <i>n</i> pokiaľ. Postupne sa prechádzajú všetky čísla od <i>i</i> po <i>n</i>, dosadia sa za <i>i</i> do sumy a pripočítava sa to k výsledku. Napríklad sčítanie čísiel do 10 sa zapíše takto: $\sum_{i=1}^{10} i$. V hlave alebo na kalkulačke sa počíta stále rovnako 1+2+3+4+5+6+7+8+9+10=55. Nemusí sa sčítavať iba <i>i</i>, ale môže sa použiť aj ako index k dátam. Ak treba spočítať známky žiakov a spraviť z nich priemer, <i>i</i> bude ako poradové číslo žiaka. Spočítavanie sa zapíše pomocou sumy $\sum_{i=1}^{n} známka\_žiaka_i$. Fungovať to bude tak, že sa zoberie známka prvého žiaka, pripočíta sa k nej známka druhého a postupne sa pripočítajú známky všetkých žiakov. Nie vždy sa zrátavajú známky žiakov, preto ho nahradíme všeobecným zápisom - písmenom <i>x</i>. Suma bude vyzerať $\sum_{i=1}^{n} x_i$. Niekedy sa môže stať, že pred tým, než x pripočítame k ostatným, treba s ním niečo spraviť. Napríklad dať ho na druhú, spraviť z neho sínus alebo použiť naň nejakú inú funkciu. Napríklad chceme spočítavať <i>sin(x)</i>. Suma bude vyzerať takto: $\sum_{i=1}^{n} sin(x_i)$. Tu sa zoberie každý údaj x, spraví sa z neho sínus a pripočíta sa k ostatným.
 </div></div>
 
+<!--.....................................................V..................................................................-->
 <div class='vocabLetter'>V</div>
 
 <div class='vocabEntry'>
-<b>Variabilný</b> <div>Niečo, čo sa mení</div>
+<b>Variabilný</b> <div>Niečo, čo sa mení</div><br />
 </div><br />
 
 <div class='vocabEntry'>
-<b>Vektor</b> <div>Niečo, čo vyjadruje smer, ktorým sa treba pohnúť a aj veľkosť, o koľko sa treba pohnúť</div>
+<b>Vektor</b> <div>Niečo, čo vyjadruje smer, ktorým sa treba pohnúť a aj veľkosť, o koľko sa treba pohnúť</div><br />
 </div><br />
 
 <div class='vocabEntry'>
