--- a/pages/gonio_functionsUsage.html
+++ b/pages/gonio_functionsUsage.html
@@ -1,6 +1,6 @@
 ---
 title: Použitie goniometrických funkcií
-description: "Použitie goniometrických funkcií v"
+description: "Použitie goniometrických funkcií"
 keywords: "goniometrické funkcie, sínus, kosínus, zvuk, mikrofón, počítač, vlnenie, mechanické vlnenie"
 permalink: pouzitie_goniometrickych_funkcii
 ---
@@ -230,7 +230,7 @@ Pre niekoho možno prekvapujúca informácia, ale <b>zvieratá počujú inak ako
 
 &#129436; <b>Domáce vtáčiky:</b> vtáky, ktoré chováme ako domácich miláčikov majú radi hudbu. Dokonca niektorá sa im páči viac a niektorá menej. Vo všeobecnosti majú radi klasickú hudbu alebo jazz. Daj si však pozor, čo necháš svojho miláčika počúvať. Jeden papagáj si obľúbil hudobný žáner, ktorý jeho majiteľ veľmi nemusel. Vtákovi sa pesničky páčili, tak sa ich naučil a spieval ich svojmu gazdovi celé dni.[7]
 
-<h2>Zopár zaujívavých linkov na záver</h2>
+<h2>Zopár zaujímavých linkov na záver</h2>
 <a href="https://www.szynalski.com/tone-generator/" target="_blank">Tu si môžeš vyskúšať, ako znejú všetky frekvencie od 0Hz po 20 000Hz.</a><br /><br />
 
 <a href="https://www.geogebra.org/m/vRQ3h8ZW" target="_blank">Tu si môžeš tiež vypočuť rôzne frekvencie. Okrem toho uvidíš, ako vyzerá sínus pri danej frekvencii.</a><br /><br />
