Rename linear function pages and images

--- a/pages/fun_linearFunction.html
+++ b/pages/fun_linearFunction.html
@@ -9,25 +9,26 @@ permalink: linearna_funkcia
 
 <h1>Lineárna funkcia</h1>
 
-Určite si už postrehol, že na svete existuje niečo také ako práca, výplata a bankový účet. Možno máš s tým už aj osobné skúsenosti a ak nie, budeme predpokladať, že si o tom už počul. Ešte potrebujeme nejakú drahšiu vec, ktorú by si si chcel kúpiť, tak si ju prosím predstav. Ideme šetriť. <br /> <br />
+Určite si už postrehol, že na svete existuje niečo také ako práca, výplata a bankový účet. Možno máš s tým už aj osobné skúsenosti a ak nie, budeme predpokladať, že si o tom už počul. Ešte potrebujeme nejakú drahšiu vec, ktorú by si si chcel kúpiť, tak si ju prosím predstav. Ideme šetriť. 
+<br /> <br />
 
 Pre účel tohto článku budeš chodiť na brigádu. Na slabo platenú brigádu, lebo sa nám nechce kresliť veľké grafy. Na brigáde zarobíš každý mesiac euro a pekne si ho odložíš na účet. Prvý mesiac zarobíš jedno euro a na jeho konci bude tvoj zostatok na účte euro. Druhý mesiac zarobíš euro a na účte už budeš mať dve eurá. Tretí mesiac tiež zarobíš euro a budeš mať na účte tri eurá, a tak ďalej, pokým nenašetríš alebo sa ti už nebude chcieť robiť. Každý mesiac sa teda našetrená suma zdvihne o euro. 
 
 <figure>
-  <img src="../assets/images/linF_GrowthPerOne.png" alt="Šetríme euro">
+  <img src="../assets/images/fun_linearGrowthPerOne.png" alt="Šetríme euro">
   <figcaption>Obr. 1.: Takto rastie tvoja našetrená suma, ak si každý mesiac odložíš euro.</figcaption>
 </figure>
  Lepšie by sa však šetrilo, ak by bola výplata väčšia. Nájdeš si teda lepšie platenú brigádu a každý mesiac si odložíš 5 eur. Prvý mesiac zarobíš 5 eur, odložíš si ich a máš ušetrených 5 eur. Druhý mesiac zarobíš zasa 5 eur a už máš našetrených 10 eur. Tretí mesiac dostaneš ďalších 5 eur a už máš našetrených 15 eur. Zostatok na účte bude teraz rásť o niečo krajšie:
 
 <figure>
-  <img src="../assets/images/linF_GrowthPerFive.png" alt="Šetríme 5 eur">
+  <img src="../assets/images/fun_linearGrowthPerFive.png" alt="Šetríme 5 eur">
   <figcaption>Obr. 2.: Takto rastie tvoja našetrená suma, ak si každý mesiac odložíš 5 euro. Pre porovnanie, je tu graf, ako rastie našetrená suma, ak si odkladáš po eure.</figcaption>
 </figure>
 
 Keď si už konečne nájdeš normálnu brigádu, tak aj normálne zarobíš. Dajme tomu, že v čistom dostaneš 512 eur. To sa bude teraz šetriť. Pre porovnanie sme v grafe nechali aj čiaru, keď šetríš po eure a po piatich. Tá, kde šetríš po euro tak málo rastie, že ju ani nie je vidno. 
 
 <figure>
-  <img src="../assets/images/linF_GrowthPerEarn.png" alt="Šetríme 512 eur">
+  <img src="../assets/images/fun_linearGrowthPerEarn.png" alt="Šetríme 512 eur">
   <figcaption>Obr. 3.: Tvoj zostatok na účte, keď máš normálnu brigádu.</figcaption>
 </figure>
 
@@ -42,7 +43,7 @@ Písmeno <i>y</i> je tá vec, ktorú chceš vedieť. Môže to byť napríklad n
 V naozajstnom svete však iba nezarábaš, ale aj míňaš. Predstav si, že pri zakladaní účtu si zabudol banke poslať doklad o návšteve školy a teraz máš namiesto študentského účtu platený. Okrem toho si ešte nezačal chodiť na brigádu, tak nič nezarábaš, ale za účet už platíš. Poplatok za účet sa pohybuje okolo 6 eur na mesiac. Ideš každý mesiac do mínusu. Aby sme to vyhrotili ešte viac, tak sa odsťahuješ do vlastného bytu a budeš platiť nájom. Nejakých 490 eur vrátane energií by mohlo stačiť. Poďme sa pozrieť, ako rýchlo sa budeš rútiť do dlhov keď budeš platiť iba za účet a ako rýchlo keď budeš platiť nájom. 
 
 <figure>
-  <img src="../assets/images/linF_AisNegative.png" alt="Míňame 6 eur alebo 490 eur">
+  <img src="../assets/images/fun_linearAisNegative.png" alt="Míňame 6 eur alebo 490 eur">
   <figcaption>Obr. 4.: Tvoj zostatok (skôr úbytok) na účte, keď iba míňaš a nič nezarábaš.</figcaption>
 </figure>
 
@@ -51,14 +52,14 @@ Môžeš si všimnúť, že to funguje rovnako, ako pri zarábaní. Čím viac m
 Poďme pridať do dlhov trochu optimizmu. Teraz sa prenes do situácie, že si zakladáš v banke účet, začínaš brigádu a tete si nezabudol doniesť papierik s potvrdením o návšteve školy. Keď si založíš účet, tak si na nule, žiadne dlhy. Teraz ten optimizmus. Na novučičký účet ti rodičia pošlú stovku, takže nezačínaš vlastne na nule ale na sto eurách. Nech nie je toho dobrého veľa, necháme ťa na brigáde zarábať 50 eur. V grafe to vyzerá takto:
 
 <figure>
-  <img src="../assets/images/linF_StartAt100.png" alt="Rodičia dajú stovku na začiatok">
+  <img src="../assets/images/fun_linearStartAt100.png" alt="Rodičia dajú stovku na začiatok">
   <figcaption>Obr. 5.: Keď ťa rodičia podporia stovkou.</figcaption>
 </figure>
 
 Keď tvoji rodičia nájdu ropu alebo vyhrajú jackpot, tak si predstav, kde by si začínal, lebo to kresliť do grafu nebudeme. Nezmestí sa. Nebuď však smutný, aj keby si začínal na 10-tich eurách, je to stále lepšie, ako by si mal začínať na mínus 10 eur. Zoberme si takého Ferka, Jožka a Terezku. Všetci traja si nájdu brigádu, kde zarobia 17 eur za mesiac. Všetci si idú založiť účet. Jožko nájde na chodníku 20 eurovku a tak si ju hneď vloží na účet. Jožko začína na 20 eur. Ferko si tiež založil účet v banke, ale po ceste domov stretol kamaráta, s ktorým sa stavil o 20 eur, že preskočí plot. Ferko plot nepreskočil, prehral 20 eur a navyše má rozbitú ústa. Ferko začína na -20 eur. Terezka ani nenašla na chodníku peniaze a ani sa nestavila s kamarátom, tak začína na nule. Môžeš z grafu hádať, kto bude mať našetrené viac po ôsmich mesiacoch.
 
 <figure>
-  <img src="../assets/images/linF_ThreeDifferentB.png" alt="Každý kamarát začína šetriť na inej sume">
+  <img src="../assets/images/fun_linearThreeDifferentB.png" alt="Každý kamarát začína šetriť na inej sume">
   <figcaption>Obr. 6.: Ferko, Jožko a Terezka začínajú šetriť na inej sume.</figcaption>
 </figure>
 
